--- a/index.css
+++ b/index.css
@@ -1,12 +1,71 @@
+/* Importing google fonts */
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700&display=swap');
+
+/* Primary whole html page CSS ing  */
 * {
     padding: 0;
     margin: 0;
-    border: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    font-family: 'Maven Pro', sans-serif;
+    text-decoration: none;
+    list-style: none;
 }
-html{
-    background-image: url(women-with-books-in-library-dp.jpeg);
-    -webkit-background-size:cover; 
-    -moz-background-size:cover;
-    -o-background-size:cover;
+
+:root {
+    --bg-color: #bbd417;
+    --main-color: #1f76cd;
+    --2nd-main-color: #ffffffcc;
+    --text-color: #fff;
+    --big-font: 5rem;
+    --h2-font: 1.9rem;
+    --p-font: 1rem;
+
+}
+
+html {
+    background-image: url(white_lib.webp);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
+}
+
+/*  Header styling  */
+header {
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    position: fixed;
+    justify-content: space-between;
+    z-index: 1000;
+    align-items: center;
+    background: var(--bg-color);
+    padding: 20px 14%;
+    transition: .3s;
+}
+.logo{
+ color: var(--text-color);
+ font-size: 1.8rem;
+ font-weight: 600;
+}
+span{
+    color: var(--main-color);
+}
+.navbar{
+ display: flex;
+}
+.navbar a{
+    color: var(--text-color);
+    font-size: 1rem;
+    font-weight: 500;
+    padding: 10px;
+
+}
+.translate{
+  
+}
+/* Home page section styling */
+.section {
+  
 }
