--- a/index.css
+++ b/index.css
@@ -34,14 +34,13 @@ html {
 /*  Header styling  */
 header {
     width: 100%;
-    padding: 20px;
     display: flex;
     position: fixed;
-    justify-content: space-between;
+    justify-content:center;
     z-index: 1000;
     align-items: center;
     background: var(--bg-color);
-    padding: 20px 14%;
+    padding: 20px 1%;
     transition: .3s;
 }
 
@@ -49,6 +48,8 @@ header {
     color: var(--text-color);
     font-size: 1.8rem;
     font-weight: 600;
+    margin: 0 40px;
+    
 }
 
 span {
@@ -57,6 +58,7 @@ span {
 
 .navbar {
     display: flex;
+    margin:0 80px;
 }
 
 .navbar a {
@@ -65,52 +67,92 @@ span {
     font-weight: 500;
     padding: 10px;
 }
-.navbar a:hover{
-  background-color: var(--main-color);
-  transition: .3s;
+
+.navbar a:hover {
+    background-color: var(--main-color);
+    transition: .3s;
 }
+#google_translate_element{
+    margin-top: 16px;
+
+}
+.goog-logo-link {
+    padding: 0 !important;
+    display:none !important;
+} 
+    
+.goog-te-gadget{
+    color: transparent !important;
+}
+
 .translate {
     color: var(--text-color);
     font-size: 1.2rem;
     font-weight: 500;
+    position:absolute; 
+    top: 28px;
+    padding: 10px;
+}
+ .translate:hover {
+    background-color: var(--main-color);
+
+} 
+.goog-te-combo{
+    margin-left:11rem !important;
+    margin-right: 0 !important; 
 }
 
 /* Home page section styling */
-section{
+section {
     padding: 120pxm 14%;
 }
-.home{
+
+.home {
     position: relative;
     height: 100vh;
     width: 100%;
     display: grid;
-    grid-gap: 1rem ;
+    grid-gap: 1rem;
 
 }
+
 /* search bar styling */
 .search-wrapper {
     display: flex;
     flex-direction: column;
     gap: .25rem;
-    border-color:var(--bg-color);
+    border-color: var(--bg-color);
     margin: 7rem 19rem 0;
     padding: 1rem;
 }
-.search-title{
-    color:var(--main-color);
-    font-size:1.5rem;
+
+.search-title {
+    color: var(--main-color);
+    font-size: 1.5rem;
     font-weight: 600;
 }
-#search{
+
+#search {
     border-color: transparent;
     padding: .5rem;
-    border-radius: 1.1rem;  
+    border-radius: 1.1rem;
+    background: var(--text-color);
 }
-#search:hover{
+
+#search:hover {
     border-color: var(--bg-color);
 }
 
 /* Styling books container */
-.books-container{
-    
+.books-container {
+    display: grid;
+    grid-template-columns: repeat(7, 10rem);
+    grid-auto-rows: 15rem;
+    margin-top: 0;
+    grid-gap: 1rem;
+    margin: auto;
+}
+
+.book-wrapper {
+    background: var(--bg-color);
 }
