--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ header {
     width: 100%;
     display: flex;
     position: fixed;
-    justify-content:center;
+    justify-content: center;
     z-index: 1000;
     align-items: center;
     background: var(--bg-color);
@@ -49,16 +49,17 @@ header {
     font-size: 1.8rem;
     font-weight: 600;
     margin: 0 40px;
-    
+
 }
 
 span {
     color: var(--main-color);
 }
+
 /* Navbar */
 .navbar {
     display: flex;
-    margin:0 80px;
+    margin: 0 80px;
 }
 
 .navbar a {
@@ -74,16 +75,17 @@ span {
 }
 
 /* Language bar modifications */
-#google_translate_element{
+#google_translate_element {
     margin-top: 16px;
 
 }
+
 .goog-logo-link {
     padding: 0 !important;
-    display:none !important;
-} 
-    
-.goog-te-gadget{
+    display: none !important;
+}
+
+.goog-te-gadget {
     color: transparent !important;
 }
 
@@ -91,19 +93,21 @@ span {
     color: var(--text-color);
     font-size: 1.2rem;
     font-weight: 500;
-    position:absolute; 
+    position: absolute;
     top: 1.9rem;
     padding: 10px;
 }
- .translate:hover {
+
+.translate:hover {
     background-color: var(--main-color);
 
-} 
-.goog-te-combo{
-    margin-left:11rem !important;
-    margin-right: 0 !important; 
+}
+
+.goog-te-combo {
+    margin-left: 11rem !important;
+    margin-right: 0 !important;
     padding: .2rem;
-    color:var(--main-color);
+    color: var(--main-color);
     font-weight: 600;
     font-family: 'Maven Pro', sans-serif !important;
     border-radius: 10px;
@@ -153,17 +157,34 @@ section {
 /* Styling books container */
 .books-container {
     display: grid;
-    grid-template-columns: repeat(7, 10.5rem);
-    grid-auto-rows: 23rem;
+    grid-template-columns: repeat(7, 168px);
+    grid-auto-rows: 21rem;
     grid-gap: 1rem;
     margin: auto;
 }
 
 .book-wrapper {
-    background: var(--bg-color);
-    display: grid;
+     background-color:rgba(235, 241, 230, 0.4);
+     display: grid;
 }
-img{
-    width:168px;
+
+img {
+    width: 168px;
+    height: 252px;
     background-size: cover;
+}
+
+.book-wrapper h4{
+    font-size: medium;
+    color: var(--main-color);
+    margin-top: 3px;
+}
+.book-wrapper h5{
+    color: black;
+    margin-top: 3px;
+}
+.book-wrapper p{
+    color: var(--text-color);
+    margin-top: 4px;
+    font-size: .9rem;
 }
